style userprofile added icons to buttons and fixed some spacing issues

--- a/client/styles/custom/userprofile.import.less
+++ b/client/styles/custom/userprofile.import.less
@@ -1,6 +1,5 @@
 .userprofile {
 	.email_box {
-		padding: 5px;
 		textarea#emailmessage {
 			.form-control;
 			height: 120px;
@@ -25,7 +24,6 @@
 			}
 			button {
 				.btn;
-				.btn-sm;
 				.btn-primary;
 			}
 		}
